--- a/assets/components/Routes/routes.scss
+++ b/assets/components/Routes/routes.scss
@@ -1,6 +1,6 @@
 .page-container {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: grid;
   grid-template-rows: auto 1fr;
 }
