--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -3,4 +3,5 @@
 #root {
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
